class search spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -171,8 +171,7 @@ code {
 
 .courses button {
   margin-top: 15px;
-  margin-left: 1em;
-  margin-right: 1em;
+  margin-right: 2em;
 }
 
 .chosen-course {
